==> Jo-Jolyne/My_Own_Project/DepTec_PN202501075_MagnetometerTest/PowerCalibrationBoard/CalibrationBoard_Firmware_20250315/USR_IC/w5500.c <==
#include "w5500.h"
#define TCP_SERVER	0x00
#define TCP_CLIENT	0x01
#define UDP_MODE	0x02
#define S_INIT		0x01
#define S_CONN		0x02
#define S_RECEIVE	 0x01
#define S_TRANSMITOK 0x02

void SPI_Send_Byte(unsigned char dat)
{
	HAL_SPI_Transmit(&hspi2, &dat, 1, 1000);
}

unsigned char SPI_Read_Byte(void)
{
	uint8_t tx=0x00;
	uint8_t result;

	HAL_SPI_TransmitReceive(&hspi2, &tx, &result, 1, 1000);
	
	return result;
}

void Write_W5500_1Byte(unsigned short reg, unsigned char dat)
{
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_RESET);

	SPI_Send_Short(reg);																
    SPI_Send_Byte(FDM1|RWB_WRITE|COMMON_R);	
	SPI_Send_Byte(dat);	

	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_SET);	
}

void Write_W5500_2Byte(unsigned short reg, unsigned short dat)
{
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_RESET);			
	SPI_Send_Short(reg);
    SPI_Send_Byte(FDM2|RWB_WRITE|COMMON_R);
    SPI_Send_Short(dat);
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_SET);	
}

void Write_W5500_nByte(unsigned short reg, unsigned char *dat_ptr, unsigned short size)
{
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_RESET);
	SPI_Send_Short(reg);
	SPI_Send_Byte(VDM|RWB_WRITE|COMMON_R);
	HAL_SPI_Transmit(&hspi2, dat_ptr, size, 1000);
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_SET);	
}

void Write_W5500_SOCK_1Byte(SOCKET s, unsigned short reg, unsigned char dat)
{
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_RESET);
	SPI_Send_Short(reg);
	SPI_Send_Byte(FDM1|RWB_WRITE|(s*0x20+0x08));
	SPI_Send_Byte(dat);	
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_SET);
}

void Write_W5500_SOCK_2Byte(SOCKET s, unsigned short reg, unsigned short dat)
{
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_RESET);
	SPI_Send_Short(reg);
	SPI_Send_Byte(FDM2|RWB_WRITE|(s*0x20+0x08));
	SPI_Send_Short(dat);
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_SET);
}

void Write_W5500_SOCK_4Byte(SOCKET s, unsigned short reg, unsigned char *dat_ptr)
{
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_RESET);
	SPI_Send_Short(reg);
	SPI_Send_Byte(FDM4|RWB_WRITE|(s*0x20+0x08));
	HAL_SPI_Transmit(&hspi2, dat_ptr, 4, 1000);
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_SET);
}

unsigned char Read_W5500_1Byte(unsigned short reg)
{
	unsigned char i;

	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_RESET);
	SPI_Send_Short(reg);
	SPI_Send_Byte(FDM1|RWB_READ|COMMON_R);
	i = SPI_Read_Byte();
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_SET);
	return i;
}

unsigned char Read_W5500_SOCK_1Byte(SOCKET s, unsigned short reg)
{
	unsigned char i;

	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_RESET);
	SPI_Send_Short(reg);
	SPI_Send_Byte(FDM1|RWB_READ|(s*0x20+0x08));
	i = SPI_Read_Byte();
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_SET);
	return i;										
}

unsigned short Read_W5500_SOCK_2Byte(SOCKET s, unsigned short reg)
{
	unsigned short txdata = 0;
	unsigned short rxdata = 0;

	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_RESET);
	SPI_Send_Short(reg);
	SPI_Send_Byte(FDM2|RWB_READ|(s*0x20+0x08));
	HAL_SPI_TransmitReceive(&hspi2, (uint8_t *)&txdata, (uint8_t *)&rxdata, 2, 1000);

	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_SET);
	rxdata = u16EdianChange(rxdata);
	return rxdata;						
}

unsigned short Read_SOCK_Data_Buffer(SOCKET s, unsigned char *dat_ptr)
{
	unsigned short rx_size;
	unsigned short offset, offset1;
	unsigned short i;
	unsigned char j;

	rx_size=Read_W5500_SOCK_2Byte(s,Sn_RX_RSR);
	if(rx_size==0) return 0;							
	if(rx_size>1460) rx_size=1460;

	offset=Read_W5500_SOCK_2Byte(s,Sn_RX_RD);
	offset1=offset;
	offset&=(S_RX_SIZE-1);	

	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_RESET);
	SPI_Send_Short(offset);					
	SPI_Send_Byte(VDM|RWB_READ|(s*0x20+0x18));

	if((offset+rx_size)<S_RX_SIZE)			
	{
		for(i=0;i<rx_size;i++)				
		{
			j = SPI_Read_Byte();			
			*dat_ptr=j;					
			dat_ptr++;					
		}
	}
	else							
	{
		offset=S_RX_SIZE-offset;
		for(i=0;i<offset;i++)				
		{
			j = SPI_Read_Byte();			
			*dat_ptr=j;					
			dat_ptr++;					
		}
		HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_SET);	
		HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_RESET);	

		SPI_Send_Short(0x00);
		SPI_Send_Byte(VDM|RWB_READ|(s*0x20+0x18));
		for(;i<rx_size;i++)			
		{
			j = SPI_Read_Byte();	
			*dat_ptr=j;			
			dat_ptr++;			
		}
	}

	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_SET);
	offset1+=rx_size;								
	Write_W5500_SOCK_2Byte(s, Sn_RX_RD, offset1);
	Write_W5500_SOCK_1Byte(s, Sn_CR, RECV);		
	return rx_size;
}

void Write_SOCK_Data_Buffer(SOCKET s, unsigned char *dat_ptr, unsigned short size)
{
	unsigned short offset,offset1;
	//unsigned short i;
	// unsigned short TxSize = (s < 2)?S0_TX_MEM_SIZE:Sn_TX_MEM_SIZE;
	#ifdef USE_UDP
	if((Read_W5500_SOCK_1Byte(s,Sn_MR)&0x0f) == MR_UDP)	
	{		
		Write_W5500_SOCK_4Byte(s, Sn_DIPR, UDP_DIPR);		 		
		Write_W5500_SOCK_2Byte(s, Sn_DPORTR, ((uint16_t)(UDP_DPORT[0])<<8)+UDP_DPORT[1]);	
    }
	#endif

	offset = Read_W5500_SOCK_2Byte(s,Sn_TX_WR);
	offset1 = offset;
	offset &= (S_TX_SIZE-1);

	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_RESET);			
    SPI_Send_Short(offset);						
	SPI_Send_Byte(VDM|RWB_WRITE|(s*0x20+0x10));

	if((offset + size) < S_TX_SIZE)						
	{
		HAL_SPI_Transmit(&hspi2, dat_ptr, size, 1000);
	}
	else											
	{
		offset = S_TX_SIZE - offset;
		HAL_SPI_Transmit(&hspi2, dat_ptr, offset, 1000);
		HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_SET);
		HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_RESET);	
		SPI_Send_Short(0x00);											
		SPI_Send_Byte(VDM|RWB_WRITE|(s*0x20+0x10));
		HAL_SPI_Transmit(&hspi2, (dat_ptr + offset), (size - offset), 1000);
	}
	HAL_GPIO_WritePin(W5500_SPI2_CS_GPIO_Port, W5500_SPI2_CS_Pin, GPIO_PIN_SET);	
	offset1 += size;														
	Write_W5500_SOCK_2Byte(s, Sn_TX_WR, offset1);
	Write_W5500_SOCK_1Byte(s, Sn_CR, SEND);						
}

void W5500_Hardware_Reset(void)
{	
	HAL_GPIO_WritePin(W5500_SPI2_RST_GPIO_Port, W5500_SPI2_RST_Pin, GPIO_PIN_RESET);
	HAL_Delay(200);
	HAL_GPIO_WritePin(W5500_SPI2_RST_GPIO_Port, W5500_SPI2_RST_Pin, GPIO_PIN_SET);	
	HAL_Delay(200);
//	while((Read_W5500_1Byte(PHYCFGR)&LINK)==0);							
}

void Socket_Init(SOCKET s)
{
	Write_W5500_SOCK_2Byte(s, Sn_MSSR, 1460);
	Write_W5500_SOCK_1Byte(s, Sn_KPALVTR, 0x02);
	Write_W5500_SOCK_2Byte(s, Sn_PORT, S_Port[s]);
}

void W5500_Interrupt_Process(void)
{
	unsigned char i,j;
	SOCKET s;
IntDispose:
	i=Read_W5500_1Byte(SIR);
	for(s=0;s<SOCK_NUM;s++)
	{
		if((i & (S0_INT<<s)) == (S0_INT<<s))
		{
			j=Read_W5500_SOCK_1Byte(s,Sn_IR);
			Write_W5500_SOCK_1Byte(s,Sn_IR,j);
			if(j&IR_CON)
			{
				S_State[s]|=S_CONN;
				//注释下面代码就可以连接多个client,同时修改SOCK_NUM来限制client的数量
				//add by cyc for test 20230224
				// if(0==s)
				// {
				// 	if(S_State[1]&S_CONN)
				// 	{
				// 		Write_W5500_SOCK_1Byte(1,Sn_CR,CLOSE);
				// 		Socket_Init(1);	
				// 		S_State[1]=0;
				// 	}
				// }
				// else if(1==s)
				// {
				// 	if(S_State[0]&S_CONN)
				// 	{
				// 		Write_W5500_SOCK_1Byte(0,Sn_CR,CLOSE);
				// 		Socket_Init(0);	
				// 		S_State[0]=0;
				// 	}
				// }
				//end add
			}
			if(j&IR_DISCON)	
			{
				Write_W5500_SOCK_1Byte(s,Sn_CR,CLOSE);
				Socket_Init(s);	
				S_State[s]=0;
			}
			if(j&IR_SEND_OK)
			{
				S_Data[s]|=S_TRANSMITOK;
			}
			if(j&IR_RECV)
			{
				S_Data[s]|=S_RECEIVE;
			}
			if(j&IR_TIMEOUT)
			{
				Write_W5500_SOCK_1Byte(s,Sn_CR,CLOSE);
				S_State[s]=0;
			}
		}
	}

	if(Read_W5500_1Byte(SIR) != 0)
		goto IntDispose;
}

void W5500_Socket_Set(void)
{
	SOCKET s;
	for(s=0;s<SOCK_NUM;s++)
	{
		if(S_State[s]==0)
		{
			if(S_Mode[s]==TCP_SERVER)
			{
				if(Socket_Listen(s)==TRUE)
					S_State[s]=S_INIT;
				else
					S_State[s]=0;
			}
			else if(S_Mode[s]==TCP_CLIENT)
			{
				if(Socket_Connect(s)==TRUE)
					S_State[s]=S_INIT;
				else
					S_State[s]=0;
			}
			else
			{
				if(Socket_UDP(s)==TRUE)
					S_State[s]=S_INIT|S_CONN;
				else
					S_State[s]=0;
			}
		}
	}
}
